syntax = "proto2";
package pb;

option go_package = "/pb";

message Message {
  required Conversation conversation = 1;
  required string from_user = 2;
  required MessageContent content = 3;
  optional int64 message_id = 4;
  optional int64 server_timestamp = 5;
  optional string to_user = 6;
  repeated string to = 7;
}

message Conversation {
  required int32 type = 1;
  required string target = 2;
  required int32 line = 3;
}

message MessageContent {
  required int32 type = 1;
  optional string searchable_content = 2;
  optional string push_content = 3;
  optional string content = 4;
  optional bytes data = 5;
  optional int32 mediaType = 6;
  optional string remoteMediaUrl = 7;
  optional int32 persist_flag = 8;
  optional int32 expire_duration = 9;
  optional int32 mentioned_type = 10;
  repeated string mentioned_target = 11;
  optional string extra = 12;
  optional string push_data = 13;
}

message PullMessageRequest {
  required int64 id = 1;
  required int32 type = 2;
  optional int64 delay = 3;
}

message PullMessageResult {
  repeated Message message = 1;
  required int64 current = 2;
  required int64 head = 3;
}

message NotifyMessage {
  required int32 type = 1;
  required int64 head = 2;
  optional string target = 3;
}

message IDBuf {
  required string id = 1;
}